--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
+  "name": "umi-gincmf",
+  "author": "gincmf-team",
+  "license": "MIT",
   "private": true,
   "scripts": {
     "start": "umi dev",
+    "dev": "cross-env UMI_UI=none NODE_ENV=development concurrently \"umi dev\" \"nodemon server.js\"",
     "build": "umi build",
     "postinstall": "umi generate tmp",
     "prettier": "prettier --write '**/*.{js,jsx,tsx,ts,less,md,json}'",
@@ -20,26 +24,38 @@
     ]
   },
   "dependencies": {
-    "@ant-design/pro-layout": "^6.5.0",
-    "antd": "^4.16.13",
-    "bootstrap": "^5.1.3",
+    "antd": "^4.18.4",
+    "antd-img-crop": "^4.1.0",
     "classnames": "^2.3.1",
-    "install": "^0.13.0",
-    "npm": "^8.3.0",
+    "concurrently": "^7.0.0",
+    "immer": "^9.0.12",
+    "koa": "^2.13.4",
+    "koa-compress": "^5.1.0",
+    "koa-mount": "^4.0.0",
+    "koa-static": "^5.0.0",
+    "nodemon": "^2.0.15",
     "path-to-regexp": "^6.2.0",
+    "rc-queue-anim": "^2.0.0",
+    "rc-scroll-anim": "^2.7.6",
+    "rc-tween-one": "^3.0.3",
     "react": "17.x",
-    "react-bootstrap": "^2.0.0",
+    "react-color": "^2.19.3",
     "react-dom": "17.x",
-    "umi": "^3.5.20"
+    "umi": "^3.5.20",
+    "use-immer": "^0.6.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@umijs/preset-react": "1.x",
+    "@umijs/preset-ui": "^2.2.9",
     "@umijs/test": "^3.5.20",
     "lint-staged": "^10.0.7",
     "prettier": "^2.2.0",
     "typescript": "^4.1.2",
     "yorkie": "^2.0.0"
+  },
+  "overrides": {
+    "antd": "^4.18.4"
   }
 }
